fa-update-and-more-buttons: fix not centered icons

--- a/src/bootstrap-social.less
+++ b/src/bootstrap-social.less
@@ -28,7 +28,7 @@
     top: 0;
     bottom: 0;
     width: @bs-height-base;
-    line-height: (@bs-height-base + 2);
+    line-height: @bs-height-base;
     font-size: 1.6em;
     text-align: center;
     border-right: 1px solid rgba(0, 0, 0, 0.2);
