--- a/src/bootstrap-social.scss
+++ b/src/bootstrap-social.scss
@@ -28,7 +28,7 @@ $bs-height-xs:   (floor($font-size-small * 1.2) + $padding-small-vertical + 1) !
     top: 0;
     bottom: 0;
     width: $bs-height-base;
-    line-height: ($bs-height-base + 2);
+    line-height: $bs-height-base;
     font-size: 1.6em;
     text-align: center;
     border-right: 1px solid rgba(0, 0, 0, 0.2);
